Cambio de URL Bitcoin.org a Bchinfo.org

--- a/_translations/es.yml
+++ b/_translations/es.yml
@@ -1,12 +1,12 @@
 es:
   about-us:
-    title: "Acerca de bitcoin.org"
-    pagetitle: "Acerca de bitcoin.org"
-    pagedesc: "Bitcoin.org está dedicado a ayudar a Bitcoin a desarrollarse de forma sostenible."
-    own: "¿Quién es el dueño de bitcoin.org?"
-    owntxt: "Bitcoin.org es el dominio original utilizado para la primera página web de Bitcoin. Fue registrado y sigue siendo gestionado por <a href=\"#development#\">los desarrolladores del núcleo de Bitcoin</a> y por otros miembros de la comunidad, con las aportaciones de las <a href=\"#community#\">comunidades de Bitcoin</a>. Bitcoin.org no es una página web oficial. Así como nadie es propietario de la tecnología del correo electrónico, nadie es propietario de la red Bitcoin. Por tanto, nadie puede pretender hablar en nombre de Bitcoin."
-    control: "Entonces... quién controla Bitcoin?"
-    controltxt: "Bitcoin es controlado por todos los usuarios de Bitcoin alrededor del mundo. Los desarrolladores están mejorando el software, pero no pueden forzar un cambio en las reglas del protocolo de Bitcoin porque todos los usuarios son libres de escoger el software que utilizan. Para permanecer compatibles unos con otros, los usuarios deben usar software que cumpla con las mismas reglas. Bitcoin solo puede funcionar bien con un consenso completo entre todos los usuarios. Por lo tanto, todos los usuarios y desarrolladores tienen un fuerte incentivo para adoptar y proteger este consenso."
+    title: "Acerca de bchinfo.org"
+    pagetitle: "Acerca de bchinfo.org"
+    pagedesc: "Bchinfo.org está dedicado a ayudar al desarrollo sostenible de Bitcoin Cash."
+    own: "¿Quién es el dueño de bchinfo.org?"
+    owntxt: "Bitcoin.org es el dominio original utilizado para la primera página web de Bitcoin. Fue registrado y sigue siendo gestionado por <a href=\"#development#\">los desarrolladores del núcleo de Bitcoin</a> y por otros miembros de la comunidad, con las aportaciones de las <a href=\"#community#\">comunidades de Bitcoin</a>. Bchinfo.org no es una página web oficial. Así como nadie es propietario de la tecnología del correo electrónico, nadie es propietario de la red Bitcoin. Por tanto, nadie puede pretender hablar en nombre de Bitcoin."
+    control: "Entonces... quién controla Bitcoin Cash?"
+    controltxt: "El control de Bitcoin Cash está en manos de todos sus usuarios alrededor del mundo. Los desarrolladores están mejorando el software, pero no pueden forzar un cambio en las reglas del protocolo de Bitcoin porque todos los usuarios son libres de escoger el software que utilizan. Para permanecer compatibles unos con otros, los usuarios deben usar software que cumpla con las mismas reglas. Bitcoin solo puede funcionar bien con un consenso completo entre todos los usuarios. Por lo tanto, todos los usuarios y desarrolladores tienen un fuerte incentivo para adoptar y proteger este consenso."
     mission: "Misión"
     missiontxt1: "Informar a los usuarios para protegerlos de errores comunes."
     missiontxt2: "Dar una descripción precisa de las propiedades de Bitcoin, sus potenciales usos y limitaciones."
@@ -14,9 +14,9 @@ es:
     missiontxt4: "Invitar a humanos con talento para ayudar con el desarrollo de Bitcoin a distintos niveles."
     missiontxt5: "Proveer visibilidad a gran escala del ecosistema Bitcoin."
     missiontxt6: "Mejorar el acceso mundial a Bitcoin haciéndolo internacional."
-    missiontxt7: "Permanecer como un recurso informativo neutral sobre Bitcoin."
+    missiontxt7: "Permanecer como un recurso informativo neutral sobre Bitcoin Cash."
     help: "Ayúdanos"
-    helptxt: "Usted puede reportar cualquier problema o ayudar a mejorar bitcoin.org accediendo a <a href=\"https://github.com/bitcoin-dot-org/bitcoin.org#how-to-participate\">GitHub</a> para abrir un problema o enviar un pull request en Ingles. Cuando envíe un pull request, por favor tome en cuenta el tiempo requerido para discutir sus cambios y la adaptación de su trabajo. Puede ayudar con las traducciones uniéndose a un equipo de traducción en <a href=\"https://github.com/bitcoin-dot-org/bitcoin.org#translation\">Transifex</a>. Por favor no pida una promoción para su negocio personal o página web, a excepción de casos especiales como conferencias. ¡Muchas gracias a todos los contribuidores que han pasado tiempo mejorando bitcoin.org!"
+    helptxt: "Usted puede reportar cualquier problema o ayudar a mejorar bchinfo.org accediendo a <a href=\"https://github.com/pokkst/bchinfo.org/#how-to-participate\">GitHub</a> para abrir un problema o enviar un pull request en Ingles. Cuando envíe un pull request, por favor tome en cuenta el tiempo requerido para discutir sus cambios y la adaptación de su trabajo. Puede ayudar con las traducciones uniéndose a un equipo de traducción en <a href=\"https://github.com/pokkst/bchinfo.org/#translation\">Transifex</a>. Por favor no pida una promoción para su negocio personal o página web, a excepción de casos especiales como conferencias. ¡Muchas gracias a todos los contribuidores que han pasado tiempo mejorando bchinfo.org!"
     maintenance: "Mantenimiento"
     documentation: "Documentación"
     translation: "Traducción"
@@ -26,6 +26,8 @@ es:
     pagetitle: "Bitcoin para Empresas"
     summary: "Bitcoin es una forma muy segura y de bajo costo para gestionar pagos."
     lowfee: "Las tarifas más bajas"
+    lowfeetext: "La altísima seguridad criptográfica ofrecida por Bitcoin permite procesar transacciones de una manera muy eficaz y barata. El usuario puede enviar y recibir pagos utilizando la red Bitcoin prácticamente sin comisiones. En la mayor parte de los casos, no es necesario el pago de comisiones, pero se recomienda el pago de las mismas para acelerar la confirmación de la transacción."
+    fraud: "Protección contra el fraude"
     lowfeetext: "La altísima seguridad criptográfica ofrecida por Bitcoin permite procesar transacciones de una manera muy eficaz y barata. El usuario puede enviar y recibir pagos utilizando la red Bitcoin prácticamente sin comisiones. En la mayor parte de los casos, no es necesario el pago de comisiones, pero se recomienda el pago de las mismas para acelerar la confirmación de la transacción."
     fraud: "Protección contra el fraude"
     fraudtext: "Todo negocio que acepta tarjetas de crédito o PayPal conoce el problema con los pagos que son anulados posteriormente. Los fraudes de reembolso significan un alcance menor del mercado y aumento de precios, los cuales afectan a los consumidores. Los pagos con Bitcoin son irreversibles y seguros, lo que significa que el coste que conlleva el fraude deja de recaer en los comerciantes."
